# redact

./: .gitignore  .isort.cfg  404.html  README.md  demo.py  index.html  notes.md  requirements.txt  vetur.config.js
backend/: README.md  alembic.ini  manage.py  migrate.sh  mkdocs.yml  pyproject.toml  run.sh  start.sh  worker.sh
backend/alembic/: env.py
backend/alembic/versions/: 01ca68f77602_init.py  14e8a900292f_init.py  439e8cbcb778_init.py  44bf8bf6d943_connections_name_unique.py  6aff78fc39d4_init.py  73de78c56c89_init.py  90d6456f01f8_init.py  9cb3078019ff_init.py  a4cabf49f4cd_init.py  a76e6a1ec954_init.py  ac4136b8f6b5_init.py  bb821841a523_init.py  bca52b3ecbd0_connections.py  c2d881d6a43e_init.py  cac54f56e868_init.py  cce7f49dee5d_init.py  dd5f7f5abd6e_init.py  e916e95a0000_categoriy_name_unique.py  f6dd2079ec2d_init.py  f72cc43ac2d9_init.py
backend/app/: __init__.py  app.py  database.py  main.py  static.py  worker.py
backend/app/celery/: __init__.py
backend/app/cli/: __init__.py  celery.py  db.py  users.py
backend/app/mail/: __init__.py
backend/app/models/orm/: __init__.py  base.py  category.py  connection.py  plan.py  (+6 more)
backend/app/oracle/: __init__.py  base.py  discovery.py  metadata.py  queries.py  redact.py
backend/app/public/: index.html
backend/app/redis/: __init__.py
backend/app/routes/: __init__.py  app_settings.py  application.py  auth.py  base.py  categories.py  connections.py  discovery.py  metadata.py  notifications.py  plan_instances.py  plans.py  redact.py  rules.py  settings.py  users.py
backend/app/scripts/: worker.py
backend/app/settings/: __init__.py  arq.py  auth.py  base.py  celery.py  discovery.py  globals.py  mail.py  redis.py  rq.py
backend/app/tasks/: __init__.py  discovery.py
backend/app/utils/: __init__.py
backend/app/vendors/: __init__.py  base.py
backend/db/: duck.db
backend/docs/: index.md  installation.md  oracle.md
backend/public/: index.html
backend/public/css/: app.9ea3dee5.css  chunk-vendors.dcdd1fc2.css
backend/public/js/: app.f0de61e9.js  app.f0de61e9.js.map  chunk-vendors.a39d6bef.js
backend/site/: 404.html
backend/site/oracle/: index.html
(+439 files in other folders)
